# NUEDC_2025

./: Cargo.toml  README.md  memory.x  openocd.cfg  rust-toolchain.toml
.cargo/: config.toml
example/: Cargo.toml
example/helper/: bindings.rs  init.rs  macros.rs
example/interfaces/: libmath.c
example/src/: main.rs
example/src/controller/: mod.rs
example/src/tasks/: mod.rs
nuedc/: Cargo.toml  build.rs
nuedc/helper/: init.rs  irq.rs  mod.rs
nuedc/src/: main.rs
nuedc/src/controller/: laser.rs  mod.rs
nuedc/src/controller/laser/: graphics.rs  mod.rs  numext.rs
nuedc/src/controller/vision/: mod.rs
nuedc/src/controller/yaw/: init.rs  mod.rs
nuedc/src/tasks/: mod.rs
nuedc/src/tasks/blinky/: task.rs
nuedc/src/tasks/imu/: crc.rs  task.rs  typedef.rs
nuedc/src/tasks/servo/: task.rs  typedef.rs
nuedc/src/tasks/step/: command.rs  stepper.rs  task.rs
nuedc/src/tasks/vision/: task.rs  typedef.rs
