[package]
name  = "nuedc"
build = "build.rs"

authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

autobenches  = false
autoexamples = false
autotests    = false


[lib]
name = "utils"
path = "helper/mod.rs"


[dependencies]

embedded-io-async = "0.6"


defmt.workspace            = true
defmt-rtt.workspace        = true
cortex-m.workspace         = true
cortex-m-rt.workspace      = true
embassy-stm32.workspace    = true
embassy-executor.workspace = true
embassy-time.workspace     = true
embassy-sync.workspace     = true
panic-probe.workspace      = true


[build-dependencies]
cargo-emit = "0.2"
